fix: do not wrap text in ng-option

--- a/src/ng-select/ng-select.component.scss
+++ b/src/ng-select/ng-select.component.scss
@@ -236,6 +236,9 @@ ng-select {
         cursor: pointer;
         display: block;
         padding: 8px 10px;
+        overflow: hidden; 
+        text-overflow: ellipsis;
+        white-space: nowrap;
         &:last-child {
             border-bottom-right-radius: 4px;
             border-bottom-left-radius: 4px;
